added support for multipolygons and holes